# 911-Dispatch-Supervisor

./: .dockerignore  .gitignore  Dockerfile  README.md  _pytest_results.txt  _revert_tests.py  _tail.txt  changes.md  demo.py  inference.py  live_dashboard.html  openenv.yaml  pyproject.toml  requirements.txt  validate_local.py
data/: city_small.json  metro_city.json
samplematerial/: prevalidation.sh  sampleinference.py
scripts/: run_baseline_matrix.py  run_nemotron_baseline.ps1
server/: app.py
src/: __init__.py  api.py  benchmark.py  city_schema.py  models.py  openenv_environment.py  phraseology.py  physics.py  protocol.py  rewards.py  state_machine.py
src/server/: Dockerfile  app.py
src/tasks/: __init__.py  mass_casualty.py  multi_incident.py  registry.py  shift_surge.py  single_incident.py
src/visualizer/: __init__.py  viewer.py
tests/: conftest.py  smoke_docker.py  test_api.py  test_arrival_task.py  test_baseline_matrix.py  test_benchmark_integration.py  test_city_schema.py  test_departure_task.py  test_determinism.py  test_inference.py  test_integrated_task.py  test_model_contracts.py  test_openenv_integration.py  test_phraseology.py  test_physics.py  test_protocol.py  test_repo_structure.py  test_rewards.py  test_runtime_budget.py  test_scaffold_contract.py  test_shift_surge_grader.py  test_state_machine.py  test_tasks.py  test_visualizer.py
